# monopoly

./: .gitignore  CMakeLists.txt  README.md  appCopy.c  migration_instructions.md
documentation/: app_guide.md
extensions/: pl_example_ext.c  pl_example_ext.h
game_data/: chance_cards.json  community_chest_cards.json  properties.json
scripts/: build.bat  build_all.bat  build_shaders.bat  gen_build.py  setup.py
shaders/: textured_quad.frag  textured_quad.frag.spv  textured_quad.vert  textured_quad.vert.spv
src/: .gitignore  app.c  build.bat  m_ai.c  m_ai.h  m_board_cards.c  m_board_cards.h  m_game.c  m_game.h  m_init_game.c  m_init_game.h  m_player.c  m_player.h  m_property.c  m_property.h  main.c  monopoly.c  monopoly.h  monopoly_init.c  monopoly_init.h
